creating more base styles

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -3,7 +3,7 @@
 		<h5 class="header-with-description">Sign Up For Our Newsletter</h5>
 		<p>Get updates on new and updated datasets.</p>
 		<input type="" name="">
-		<button class="button button-sm">Submit</button>
+		<button class="button button-sm button-secondary">Submit</button>
 	</div>
 	<div class="wrapper-half wrapper-half-right">
 		<nav class="float-right">
