--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -11,7 +11,7 @@
 		</ul>
 	</nav>
 	<ul class="nav-languages nav-list">
-		<li class="nav-list_item"><a class="nav-link">English</a></li>
+		<li class="nav-list_item"><a class="nav-link active">English</a></li>
 		<li class="nav-list_item"><a class="nav-link">Persian</a></li>
 	</ul>
 	</header>
