--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper">
+	<div class="wrapper wrapper-content">
 		<h1>About</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie. Nunc congue nulla mi, et consequat tellus dapibus ac. Fusce eget magna ante. Vestibulum quis varius libero. Proin ac tellus eu massa consequat fringilla quis id eros. Etiam laoreet fermentum nibh vel auctor. Cras sed ipsum ac nunc consequat interdum eu quis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-		<p>Suspendisse ornare porttitor eros. Fusce eget enim eros. Quisque dignissim faucibus est, a fringilla tortor bibendum non. Fusce vitae ornare sem. Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.</p>
-		<p>Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.</p>
-		<div>
+		<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie. Nunc congue nulla mi, et consequat tellus dapibus ac. Fusce eget magna ante. Vestibulum quis varius libero. Proin ac tellus eu massa consequat fringilla quis id eros. Etiam laoreet fermentum nibh vel auctor. Cras sed ipsum ac nunc consequat interdum eu quis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+		<p class="description-md">Suspendisse ornare porttitor eros. Fusce eget enim eros. Quisque dignissim faucibus est, a fringilla tortor bibendum non. Fusce vitae ornare sem. Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.</p>
+		<p class="description-md">Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.</p>
+		<div class="block-partners">
 			<h3>partners</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.</p>
 			<ul>
@@ -19,11 +19,15 @@ layout: default
 		</div>
 	</div>
 </section>
-<section class="section-black">
-	<div class="wrapper">
-		<h2>Get Involved</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-		<a class="button button-white" href="">Contact us</a>
-		<a class="button button-white" href="">Find us on Github</a>
+<section class="section-black section-black-last">
+	<div class="wrapper wrapper-content">
+		<div class="centered-content">
+			<h2 class="section-black-header">Get Involved</h2>
+			<div class="section-black-description">
+				<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+				<a class="button button-white" href="">Contact us</a>
+				<a class="button button-white button-secondary" href="">Find us on Github</a>
+			</div>
+		</div>
 	</div>
 </section>
