--- a/app/_layouts/contact.html
+++ b/app/_layouts/contact.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper">
+	<div class="wrapper wrapper-content-sm">
 		<div class="feature-internal">
 			<h1>Contact</h1>
 			<p class="description-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt.</p>
@@ -33,7 +33,7 @@ layout: default
 		<div class="subsection subsection-bold content-centered">
 			<h2 class="header-centered">Other Ways to Reach Out</h2>
 			<a class="button button-xl" href="">emailaddress.com</a>
-			<a class="button button-xl" href="">Github</a>
+			<a class="button button-xl button-secondary" href="">Github</a>
 		</div>
 	</div>
 </section>
