--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper">
+	<div class="wrapper wrapper-content-sm">
 		<div>
 			<span class="type-category type-category-lg">Housing</span>
 			<h1>Name of Individual Dataset</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante. Nulla tincidunt, dolor vel imperdiet hendrerit, nisi odio viverra dolor, et condimentum justo ex et urna.</p>
+			<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante. Nulla tincidunt, dolor vel imperdiet hendrerit, nisi odio viverra dolor, et condimentum justo ex et urna.</p>
 			<dl class="metadata">
 				<dt>Source</dt>
 				<dd>Name of source</dd>
@@ -35,7 +35,7 @@ layout: default
 		</div>
 	</div>
 </section>
-<section class="section-black">
+<section class="section-black section-black-last">
 	<div class="wrapper">
 		<h2>Projects Made With This Dataset</h2>
 		<ul>
