--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="wrapper-feature feature">
-	<div class="wrapper">
+	<div class="wrapper wrapper-content">
 			<div class="section-feature_main">
 				<h1 class="header-feature">Making Iranian Data Available to the Public</h1>
 				<p class="description-lg">Find clean, reliable data from housing to transportation. With our growing database, check back for updates or sign up for our newsletter, to see when new sets are added.</p>
@@ -13,7 +13,7 @@ layout: default
 				<ul class="list-type-none">
 					<li>
 						<span class="type-category">Population</span>
-						<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt class="metadata-title">Source:</dt>
 							<dd class="metadata-description">Name of Source</dd>
@@ -22,7 +22,7 @@ layout: default
 					</li>
 					<li>
 						<span class="type-category">Trade</span>
-						<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt class="metadata-title">Source:</dt>
 							<dd>Name of Source</dd>
@@ -34,23 +34,27 @@ layout: default
 	</div>
 </section>
 <section class="section-black">
-	<div class="wrapper">
-		<h2 class="section-black-header">Our Methodology</h2>
-		<div class="section-black-description">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante.</p>
-			<a class="button button-white" href="">Learn More</a>
-			<a class="button button-white" href="">Contribute</a>
+	<div class="wrapper wrapper-content">
+		<div class="centered-content">
+			<h2 class="section-black-header">Our Methodology</h2>
+			<div class="section-black-description">
+				<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante.</p>
+				<a class="button button-white" href="">Learn More</a>
+				<a class="button button-white button-secondary" href="">Contribute</a>
+			</div>
 		</div>
 	</section>
-	<section  class="wrapper">
+	<section  class="wrapper wrapper-content">
 		<h2>Use Cases</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-		<img>
-		<div>
-			<span>Featured</span>
-			<h3>Name of Dataset</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-			<a href="">View Site</a>
+		<p class="description-md width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+		<div class="feature-overlay">
+			<img class="img-feature" src="./assets/graphics/feature1.jpg">
+			<div class="overlay-description">
+				<span class="type-category">Featured</span>
+				<h5><a class="text-link" href="">Name of Dataset</a></h5>
+				<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+				<a class="normal-link" href="">View Site</a>
+			</div>
 		</div>
 		<a class="button" href="">View All Use Cases</a>
 	</div>
