--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper">
+	<div class="wrapper wrapper-content">
 		<div class="feature-internal">
 			<h1>Resources</h1>
 			<p class="description-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.</p>
 			<a class="button" href="">View the API</a>
-			<a class="button" href="">Find us on Github</a>
+			<a class="button button-secondary" href="">Find us on Github</a>
 		</div>
 		<div class="sidebar">
 			<h5>Jump to</h5>
@@ -32,7 +32,7 @@ layout: default
 				<h4 class="header-divider">Resource Category</h4>
 				<ul class="list-type-none">
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -40,7 +40,7 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -48,36 +48,7 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-					</li>
-				</ul>
-			</div>
-			<div class="faux-list-item">
-				<h4 class="header-divider">Resource Category</h4>
-				<ul class="list-type-none">
-					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-					</li>
-					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-					</li>
-					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -90,7 +61,7 @@ layout: default
 				<h4 class="header-divider">Resource Category</h4>
 				<ul class="list-type-none">
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -98,7 +69,7 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -106,7 +77,36 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+					</li>
+				</ul>
+			</div>
+			<div class="faux-list-item">
+				<h4 class="header-divider">Resource Category</h4>
+				<ul class="list-type-none">
+					<li class="list-item-block">
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+					</li>
+					<li class="list-item-block">
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+					</li>
+					<li class="list-item-block">
+						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
