--- a/app/_layouts/usecases.html
+++ b/app/_layouts/usecases.html
@@ -3,40 +3,40 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper">
-		<div class="feature-internal">
-			<h1>Use Cases</h1>
-			<img src="">
-			<div>
+	<div class="wrapper wrapper-content">
+		<h1>Use Cases</h1>
+		<div class="feature-overlay">
+			<img class="img-feature" src="../assets/graphics/feature1.jpg">
+			<div class="overlay-description">
 				<span class="type-category">Featured</span>
-				<h4>Name of Dataset</h4>
+				<h4><a class="text-link" href="">Name of Dataset</a></h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-				<a href="">View Site</a>
+				<a class="normal-link" href="">View Site</a>
 			</div>
 		</div>
-		<ul>
-			<li>
-				<img src="">
-				<h4>Name of Dataset</h4>
-				<dl>
+		<ul class="list-type-none">
+			<li class="list-item-block list-item-block-sm">
+				<img class="img-feature image-usecase" src="../assets/graphics/usecase1.jpg">
+				<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+				<dl class="metadata">
 					<dt>Source:</dt>
 					<dd>Name of Source</dd>
 				</dl>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
 			</li>
-			<li>
-				<img src="">
-				<h4>Name of Dataset</h4>
-				<dl>
+			<li class="list-item-block list-item-block-sm">
+				<img class="img-feature image-usecase" src="../assets/graphics/usecase2.jpg">
+				<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+				<dl class="metadata">
 					<dt>Source:</dt>
 					<dd>Name of Source</dd>
 				</dl>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
 			</li>
-			<li>
-				<img src="">
-				<h4>Name of Dataset</h4>
-				<dl>
+			<li class="list-item-block list-item-block-sm">
+				<img class="img-feature image-usecase" src="../assets/graphics/usecase3.jpg">
+				<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+				<dl class="metadata">
 					<dt>Source:</dt>
 					<dd>Name of Source</dd>
 				</dl>
@@ -45,10 +45,14 @@ layout: default
 		</ul>
 	</div>
 </section>
-<section class="section-black">
-	<div class="wrapper">
-		<h2>Show Us Your Work</h2>
-		<p>Have a project that you’ve build off of an Open Iran Data dataset? Send us your information so that we can feature it on the site.</p>
-		<a class="button button-white" href="">Send Your Project</a>
+<section class="section-black section-black-last">
+	<div class="wrapper wrapper-content">
+		<div class="centered-content">
+			<h2 class="section-black-header">Show Us Your Work</h2>
+			<div class="section-black-description">
+				<p class="description-md">Have a project that you’ve build off of an Open Iran Data dataset? Send us your information so that we can feature it on the site.</p>
+				<a class="button button-white" href="">Send Your Project</a>
+			</div>
+		</div>
 	</div>
 </section>
