--- a/app/assets/styles/_reset.scss
+++ b/app/assets/styles/_reset.scss
@@ -72,6 +72,10 @@ li {
     }
 }
 
+fieldset {
+  border: none;
+  padding: 0;
+}
 
 
 /**
@@ -92,11 +96,6 @@ a {
 
     &:visited {
         color: $text-color;
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
     }
 }
 
