--- a/app/assets/styles/_common.scss
+++ b/app/assets/styles/_common.scss
@@ -54,6 +54,11 @@ h6 {
 	}
 }
 
+.description-md {
+	font-size: 1.1em;
+	line-height: 1.8em;
+}
+
 .description-lg {
 	font-size: 1.15em;
 	line-height: 1.7em;
@@ -66,12 +71,27 @@ h6 {
 
 .nav-languages {
 	float: right;
+	.active {
+		font-weight: 700;
+	}
+	li {
+		&:first-of-type {
+			border-right: 1px solid $light-grey;
+			padding-right: 2em;
+		}
+	}
 }
 
 .type-category {
 	text-transform: uppercase;
 	font-size: .8em;
 	font-weight: 700;
+}
+
+.type-category-lg {
+	font-size: 1.35em;
+	display: block;
+	margin-bottom: .3em;
 }
 
 .header-feature {
@@ -90,20 +110,30 @@ h6 {
 	text-align: center;
 }
 
+.metadata-date {
+	font-style: italic;
+}
+
 header {
 	margin: 2.2em 0;
 }
 
 
 /*links & buttons*/
-.nav-link {
+.nav-link, .nav-link:visited, {
 	color: $text-color;
+}
+
+.normal-link, .normal-link:visited {
+	color: $link-color;
+	font-family: $header-font;
+	font-weight: 700;
 }
 
 .button, .button:visited,  {
 	color: $link-color;
 	border: 3px solid $link-color;
-	padding: .4em 2.5em;
+	padding: .6em 3em;
 	font-weight: 700;
 	font-size: 1.2em;
 	margin-top: 1em;
@@ -114,7 +144,6 @@ header {
 .button-lg {
 	border: 4px solid $link-color;
 	font-weight: 900;
-	padding: .6em 3em;
 }
 
 .button-sm {
@@ -134,44 +163,59 @@ header {
 	text-align: center;
 }
 
+.button-secondary {
+	margin-left: 1.1em;
+}
+
+.text-link {
+	border-bottom: 1px solid $lightest-grey;
+}
+
 
 /*Sections*/
 section {
-	margin: 6em 0;
+	margin: 6em 0 10em;
 }
 
 .section-black {
 	background-color: $dark-grey;
 	color: #fff;
-	padding-top: 8em;
-	padding-bottom: 8em;
+	padding-top: 10em;
+	padding-bottom: 10em;
 	p {
 		color: #fff;
 	}
+}
+
+.section-black-last {
+	margin-bottom: 0;
 }
 
 .section-black-description {
 	float: left;
 	border-left: 3px solid #fff;
 	padding-left: 4%;
-	margin-left: 4%;
-	width: 40%;
+	margin-left: 6%;
+	width: 60%;
+	p {
+		color: $lightest-grey;
+	}
 }
 
 .section-black-header {
-	width: 20%;
+	width: 28%;
 	float: left;
 }
 
 .feature-internal {
-	width: 45%;
+	max-width: 450px;
 	margin-bottom: 5em;
 }
 
 .subsection {
 	border-top: 1px solid $lightest-grey;
-	padding-top: 3em;
-	margin-top: 3em;
+	padding-top: 7em;
+	margin-top: 7em;
 }
 
 .subsection-bold {
@@ -179,9 +223,14 @@ section {
 }
 
 
-
 /*Lists*/
-nav { float: left; }
+nav { 
+	float: left; 
+	.nav-list_item:hover, .nav-list_item:active {
+		border-bottom: 2px solid $link-color;
+    padding-bottom: .3em;
+	}
+}
 
 .list-type-none {
 	list-style-type: none;
@@ -199,19 +248,42 @@ nav { float: left; }
 
 .list-item-vertical {
 	padding-top: 1em;
-	margin: 2em;
+	margin: 2em 0 4.3em;
 }
 
 .list-item-block {
 	width: 42%;
 	float: left;
-	margin-right: 2.5em;
+	margin-right: 4.5em;
 	margin-bottom: 2.5em;
+}
+
+.list-item-block-sm {
+	width: 29%;
+	&:nth-child(3) {
+		margin-right: 0;
+	}
 }
 
 .faux-list-item {
 	margin-bottom: 3em;
 	@extend %clearfix;
+
+	.list-item-block {
+		&:nth-child(even) {
+			margin-right: 0;
+		}
+	}
+}
+
+.img-feature { 
+	width: 100%;
+	border: 1px solid $light-grey;
+}
+
+.image-usecase {
+	border-bottom: 3px solid $black;
+	margin: 3em 0 1.1em;
 }
 
 
@@ -224,8 +296,16 @@ input {
 	font-size: 1em;
 }
 
-label {
+.header-filter {
 	display: block;
+	font-family: $header-font;
+	font-weight: 700;
+	font-size: 1.2em;
+	margin-bottom: .5em;
+}
+
+.wrapper-filter-item {
+	margin-bottom: 2.5em;
 }
 
 
@@ -244,7 +324,7 @@ footer {
 /*Homepage*/
 .section-feature_main {
 	float: left;
-	width: 45%;
+	width: 55%;
 }
 
 .section-feature_secondary {
@@ -253,27 +333,30 @@ footer {
 	border-left: 4px solid $black;
 	padding-left: 4%;
 	margin-left: 7%;
+	li {
+		margin-bottom: 4em;
+	}
 }
 
 
 
 .sidebar {
 	float: left;
-	width: 20%;
+	width: 23%;
 }
 
 .content-sidebar {
-	width: 65%;
+	width: 70%;
 	float: left;
 }
 
 .element-file-type {
 	border-radius: 4px;
-	padding: .3em 1em;
+	padding: 0em 1em;
 	background-color: $lightest-grey;
 	display: inline-block;
 	font-weight: 700;
-	font-size: .7em
+	font-size: .65em
 }
 
 .housing { border-top: 2px solid $housing; }
@@ -291,6 +374,14 @@ footer {
   text-align: center;
 }
 
+.wrapper-content {
+	max-width: 900px;
+}
+
+.wrapper-content-sm {
+	max-width: 750px;
+}
+
 .wrapper-half {
 	width: 50%;
 	float: left;
@@ -302,4 +393,35 @@ footer {
 
 .float-right {
 	float: right;
+}
+
+.feature-overlay {
+	position: relative;
+	margin-bottom: 3em;
+	margin-top: 2.5em;
+}
+
+.overlay-description {
+	padding: 1.5em 3em 2em;
+	border: 1px solid $light-grey;
+	border-top: 3px solid $black;
+	position: absolute;
+	bottom: 6px;
+	width: 92%;
+	background-color: rgba(255, 255, 255, 0.8);
+}
+
+.width-shortened {
+	max-width: 550px;
+}
+
+.block-partners {
+	float: right;
+	width: 20%;
+}
+
+.centered-content {
+	margin: 0 auto;
+	width: 85%;
+	@extend %clearfix;
 }
