--- a/_layouts/resources.html
+++ b/_layouts/resources.html
@@ -12,18 +12,15 @@ layout: default
 		</div>
 		<div class="sidebar">
 			<h5>Jump to</h5>
-			<ul>
-				<li>
-					Category 1
-					<span>(2)</span>
+			<ul class="list-type-none">
+				<li class="list-item-filter">
+					<a href="">Category 1 <span>(2)</span></a>
 				</li>
-				<li>
-					Category 2
-					<span>(2)</span>
+				<li class="list-item-filter">
+					<a href="">Category 2 <span>(2)</span></a>
 				</li>
-				<li>
-					Category 3
-					<span>(2)</span>
+				<li class="list-item-filter">
+					<a href="">Category 3 <span>(2)</span></a>
 				</li>
 			</ul>
 		</div>
