--- a/_layouts/usecases.html
+++ b/_layouts/usecases.html
@@ -16,7 +16,7 @@ layout: default
 		</div>
 		<ul class="list-type-none">
 			<li class="list-item-block list-item-block-sm">
-				<img class="img-feature image-usecase" src="../assets/graphics/usecase1.jpg">
+				<a href=""><img class="img-feature image-usecase" src="../assets/graphics/usecase1.jpg"></a>
 				<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
 				<dl class="metadata">
 					<dt>Source:</dt>
@@ -25,7 +25,7 @@ layout: default
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
 			</li>
 			<li class="list-item-block list-item-block-sm">
-				<img class="img-feature image-usecase" src="../assets/graphics/usecase2.jpg">
+				<a href=""><img class="img-feature image-usecase" src="../assets/graphics/usecase2.jpg"></a>
 				<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
 				<dl class="metadata">
 					<dt>Source:</dt>
@@ -34,7 +34,7 @@ layout: default
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
 			</li>
 			<li class="list-item-block list-item-block-sm">
-				<img class="img-feature image-usecase" src="../assets/graphics/usecase3.jpg">
+				<a href=""><img class="img-feature image-usecase" src="../assets/graphics/usecase3.jpg"></a>
 				<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
 				<dl class="metadata">
 					<dt>Source:</dt>
