--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -8,7 +8,7 @@ layout: default
 			<h1>Available Data</h1>
 			<p class="description-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.</p>
 		</div>
-		<div class="content-internal">
+		<div class="content-internal" id="content-internal">
 			<div class="sidebar">
 				<h5>Filter Datasets</h5>
 				<form>
@@ -84,105 +84,6 @@ layout: default
 						</fieldset>
 					</div>
 				</form>
-			</div>
-			<div class="content-sidebar">
-				<h6 class="content-sidebar-header">Showing 15 Datasets</h6>
-				<div class="sort-filter">
-					<span class="sort-filter-header">Sort by</span>
-					<div class="dropdown-sm">Recent Updates</div>
-				</div>
-				<ul class="list-type-none">
-					<li class="population list-item-vertical">
-						<span class="type-category">Population</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<dl class="metadata metadata-date">
-							<dt>Updated:</dt>
-							<dd>Jul. 28, 2016</dd>
-						</dl>
-						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-						<ul class="list-type-none">
-							<li class="element-file-type">CSV</li>
-							<li class="element-file-type">XML</li>
-						</ul>
-					</li>
-					<li class="trade list-item-vertical">
-						<span class="type-category">Trade</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<dl class="metadata metadata-date">
-							<dt>Updated:</dt>
-							<dd>Jul. 28, 2016</dd>
-						</dl>
-						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-						<ul class="list-type-none">
-							<li class="element-file-type">CSV</li>
-							<li class="element-file-type">XML</li>
-						</ul>
-					</li>
-					<li class="housing list-item-vertical">
-						<span class="type-category">Housing</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<dl class="metadata metadata-date">
-							<dt>Updated:</dt>
-							<dd>Jul. 28, 2016</dd>
-						</dl>
-						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-						<ul class="list-type-none">
-							<li class="element-file-type">CSV</li>
-							<li class="element-file-type">XML</li>
-						</ul>
-					</li>
-					<li class="women list-item-vertical">
-						<span class="type-category">Women</span>
-						<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<dl class="metadata metadata-date">
-							<dt>Updated:</dt>
-							<dd>Jul. 28, 2016</dd>
-						</dl>
-						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-						<ul class="list-type-none">
-							<li class="element-file-type">CSV</li>
-							<li class="element-file-type">XML</li>
-						</ul>
-					</li>
-					<li class="housing list-item-vertical">
-						<span class="type-category">Housing</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<dl class="metadata metadata-date">
-							<dt>Updated:</dt>
-							<dd>Jul. 28, 2016</dd>
-						</dl>
-						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-						<ul class="list-type-none">
-							<li class="element-file-type">CSV</li>
-							<li class="element-file-type">XML</li>
-						</ul>
-					</li>
-				</ul>
-				<div class="pagination">
-					<ul>
-						<li></li>
-					</ul>
-				</div>
 			</div>
 		</div>
 	</div>
